--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
     "interface.server"
   ],
   "author": "Charlie Roberts <charlie@charlie-roberts.com> (http://www.charlie-roberts.com/)",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/charlieroberts/interface.server.websocket.git"
+  },
+  "bugs": {
+    "url": "https://github.com/charlieroberts/interface.server.websocket/issues"
+  }
 }
